# dataloader

./: .dockerignore  .envrc.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-image.yml
tests/: create_task.hrl
